Prevent CTA btn from jumping before portrait load

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -238,6 +238,7 @@ a.hero-btn:hover {
 .pre-portrait {
   height: calc(100% - 25px);
   padding-right: calc(57vh - 25px);
+  height: inherit;
 }
 
 .portrait-img {
